# ObjectDetection

./: CMakeLists.txt  cad_models.txt  cascade.xml  depth_to_pointcloud.launch  detection.cpp  detection.h  localization.cpp  localization.h  main.cpp  model.txt  object_detection.cpp  object_recognition.cpp  object_recognition.h  package.xml
include/: detection.h  localization.h
src/: detection.cpp  detector.cpp  localization.cpp  localizer.cpp
